--- a/src/pages/terms-of-service.astro
+++ b/src/pages/terms-of-service.astro
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-adsense-account" content="ca-pub-1171318789530444">
         <title>
             Terms of Service | <a href="https://gemini-ai.top">Gemini Pro Chat</a>
         </title>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1171318789530444"
+     crossorigin="anonymous"></script>
         <style>
             body {
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
