--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,8 +11,11 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1171318789530444"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
+    <meta name="google-adsense-account" content="ca-pub-1171318789530444">
     <link rel="icon" type="image/svg+xml" href="/icon.svg">
     <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180"> -->
     <link rel="mask-icon" href="/icon.svg" color="#FFFFFF">
@@ -23,9 +26,6 @@ const { title } = Astro.props;
     { import.meta.env.HEAD_SCRIPTS && <Fragment set:html={import.meta.env.HEAD_SCRIPTS } /> }
     { pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
     { import.meta.env.PROD && pwaInfo && <Fragment set:html={pwaInfo.registerSW.scriptTag} /> }
-    <!-- google ads -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1171318789530444"
-    crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZYQXBSLKM"></script>
     <script>
